# vlbimeta

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  telstate_antab_from_mean_power.py  vdif_power_antab.py  vdif_power_summary.py  vlbimeta.py
catalogues/: vlbi_cat_em181a.csv  vlbi_cat_es116a.csv  vlbi_cat_n24l3.csv  vlbi_cat_n25l1.csv
metadata/: calmel.rxg
scripts/: vlbimeta.py
src/vlbimeta/: __init__.py  __main__.py  controller_entrypoint.py  paths.py  runtime.py  telstate_antab_from_mean_power.py  vdif_power_antab.py  vdif_power_summary.py
src/vlbimeta/catalogues/: vlbi_cat_n23l3.csv
src/vlbimeta/metadata/: es116ame.antab
tests/: test_runtime.py
