[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlbimeta"
version = "0.1.0"
description = "VLBI post-processing utilities and controller entrypoints"
requires-python = ">=3.8"
dependencies = [
    "astropy>=4.2",
    "baseband>=4.1.3",
    "katdal>=0.23",
    "importlib-resources>=6.1.1",
    "matplotlib>=3.3.4",
    "numpy>=1.20.1",
    "pandas>=1.2.2",
    "scipy>=1.10.1",
]

[project.scripts]
vlbimeta = "vlbimeta.controller_entrypoint:main"
vdif-power-summary = "vlbimeta.vdif_power_summary:main"
vdif-power-antab = "vlbimeta.vdif_power_antab:main"
telstate-antab-from-mean-power = "vlbimeta.telstate_antab_from_mean_power:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vlbimeta = ["catalogues/*.csv", "metadata/*"]
